Fix: z-indexes

--- a/Resources/public/css/editor.css
+++ b/Resources/public/css/editor.css
@@ -7,6 +7,10 @@ body.toolkit {
     width: 70%;
 }
 
+.toolkit .modal {
+    z-index: 100000;
+}
+
 #add-block-modal .single-block-button {
     background: #CCDAE5 none repeat scroll 0 0;
     border-radius: 2px;
@@ -75,7 +79,7 @@ body.toolkit {
     left: 1px;
     position: fixed;
     top: 1px;
-    z-index: 1000;
+    z-index: 100000;
     opacity: 0.2;
     background: #3791d6;
     color: #fff;
@@ -87,7 +91,7 @@ body.toolkit {
     left: 38px;
     position: fixed;
     top: 1px;
-    z-index: 1000;
+    z-index: 100000;
     opacity: 0.2;
     background: #3791d6;
     color: #fff;
@@ -167,42 +171,42 @@ body.toolkit {
     position: absolute;
     top: 0px;
     right: 148px;
-    z-index: 1000;
+    z-index: 100000;
 }
 
 .btn-sort-block {
     position: absolute;
     top: 0px;
     right: 62px;
-    z-index: 1000;
+    z-index: 100000;
 }
 
 .btn-move-up-block {
     position: absolute;
     top: 0px;
     right: 118px;
-    z-index: 1000;
+    z-index: 100000;
 }
 
 .btn-move-down-block {
     position: absolute;
     top: 0px;
     right: 88px;
-    z-index: 1000;
+    z-index: 100000;
 }
 
 .btn-disable-block {
     position: absolute;
     top: 0px;
     right: 30px;
-    z-index: 1000;
+    z-index: 100000;
 }
 
 .btn-enable-block {
     position: absolute;
     top: 0px;
     right: 30px;
-    z-index: 1000;
+    z-index: 100000;
     background: #FFBBBB;
 }
 
@@ -210,7 +214,7 @@ body.toolkit {
     position: absolute;
     top: 0px;
     right: 1px;
-    z-index: 1000;
+    z-index: 100000;
 }
 
 .block-label {
@@ -219,7 +223,7 @@ body.toolkit {
     margin-top: 10px;
     padding: 0 8px;
     text-transform: uppercase;
-    z-index: 1000;
+    z-index: 100000;
 }
 
 .submit-block-edit {
